force-app/main/default/objects/FieloPLT__ChallengeMember__c/FieloPLT__ChallengeMember__c.object-meta.xml
<CustomObject>
    <description>Challenge Members are all Members who are subscribed to a Challenge. They can accomplish Missions and obtain Challenge Rewards.</description>
    <label>Challenge Member</label>
    <nameField>
        <displayFormat>CHM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenge Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>