force-app/main/default/objects/FieloPLT__ChallengeMember__c/fields/FieloPLT__AlternativeKey__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__AlternativeKey__c</fullName>
    <label>Alternative Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>