force-app/main/default/objects/FieloPLT__ChallengeMember__c/fields/FieloPLT__Challenge__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Challenge__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Challenge related to a specific Member.</description>
    <inlineHelpText>Challenge related to a specific Member.</inlineHelpText>
    <label>Challenge</label>
    <referenceTo>FieloPLT__Challenge__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>ChallengesMembers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>