force-app/main/default/objects/FieloPLT__ChallengeMember__c/fields/FieloPLT__ChallengeReward__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ChallengeReward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Challenge Reward</label>
    <referenceTo>FieloPLT__ChallengeReward__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>ChallengeRewards</relationshipName>
    <type>Lookup</type>
</CustomField>