force-app/main/default/objects/FieloPLT__ChallengeMember__c/fields/FieloPLT__Counter__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Counter__c</fullName>
    <description>Number of times a Challenge Reward is granted. It is used when &quot;Accomplished Action&quot; in Challenge is &quot;Repeat&quot;.</description>
    <inlineHelpText>Number of times a Challenge Reward is granted. It is used when &quot;Accomplished Action&quot; in Challenge is &quot;Repeat&quot;.</inlineHelpText>
    <label>Counter</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>