force-app/main/default/objects/FieloPLT__ChallengeMember__c/fields/FieloPLT__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Member who is subscribed to a specific Challenge.</description>
    <inlineHelpText>Enter the name of a Member you want to subscribe to this Challenge.</inlineHelpText>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Challenge Members</relationshipLabel>
    <relationshipName>ChallengesMembers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>