force-app/main/default/objects/FieloPLT__ChallengeMember__c/fields/FieloPLT__Position__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Position__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Position number from Members subscribed to a Challenge. Only for Challenges which include Missions under &quot;Mission Table&quot; or Challenges which do not deliver Challenge Rewards.</description>
    <inlineHelpText>Position number from Members subscribed to a Challenge. Only for Challenges which include Missions under &quot;Mission Table&quot;Challenges which do not deliver Challenge Rewards.</inlineHelpText>
    <label>Position</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>