force-app/main/default/objects/FieloPLT__ChallengeMember__c/fields/FieloPLT__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Status__c</fullName>
    <description>Challenge Member status. When &quot;Accomplished&quot;, the Challenge Reward meets its &quot;Logical expression&quot; and can be granted. When &quot;Not Accomplished&quot;, a &quot;Mission with Objective&quot; was not attained and the Challenge Reward cannot be granted.</description>
    <inlineHelpText>Challenge Member status. When &quot;Accomplished&quot;, the Challenge Reward meets its &quot;Logical expression&quot; and can be granted. When &quot;Not Accomplished&quot;, a &quot;Mission with Objective&quot; was not attained and the Challenge Reward cannot be granted.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accomplished</fullName>
            </value>
            <value>
                <fullName>Not Accomplished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>