force-app/main/default/objects/FieloPLT__ChallengeMember__c/fields/FieloPLT__Value__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Value__c</fullName>
    <description>Value number from a Challenge which includes a &quot;Mission without Objective&quot; or Challenges which do not deliver Challenge Rewards.</description>
    <inlineHelpText>Value number from a Challenge which includes a &quot;Mission without Objective&quot; or Challenges which do not deliver Challenge Rewards.</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>