force-app/main/default/objects/FieloPLT__ChallengeMember__c/listViews/FieloPLT__All.listView-meta.xml
<ListView>
    <fullName>FieloPLT__All</fullName>
    <columns>NAME</columns>
    <columns>FieloPLT__ChallengeReward__c</columns>
    <columns>FieloPLT__Counter__c</columns>
    <columns>FieloPLT__Member__c</columns>
    <columns>FieloPLT__Status__c</columns>
    <columns>FieloPLT__Value__c</columns>
    <columns>FieloPLT__Position__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>